# MultiQC

./: .cursorignore  .cursorrules  .dockerignore  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .prettierrc.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSP.txt  CSP_HEADER.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  TRIAGE_SYSTEM_TEST_RESULTS.md  appveyor.yml  codecov.yml  docs.sh  flake.nix  generate_growth_charts.py  multiqc  multiqc_config.yaml  multiqc_config.yaml.example  multiqc_config_example.yaml  multiqc_report.html  pyproject.toml  requirements.txt  runTest.sh  setup.py
.claude/: SKILLS_QUICKSTART.md  settings.json  settings.local.json
.claude-plugin/: README.md  marketplace.json
.claude/commands/: new-module.md
.claude/docs/: best-practices.md  module-triage-project-setup.md  module-triage-system.md  skills.md
.claude/skills/: README.md
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  MODULE_TRIAGE_PROJECT_SETUP.md  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  build-assets.sh  changelog.py  compile-sass.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  bug_report.yml  config.yml  feature-request.yml  feature_request.md  feature_request.yml  module-request.md  module-request.yml
.github/workflows/: automated-module-generation.yml  changelog.py  changelog.yml  check_csp.py  claude-code-review-trigger.yml  claude-code-review.yml  claude.yml  code_checks.py  codeql.yml  csp.py  csp.yml  deploy-pypi.yml  deploy_docs.yml  deploy_pypi.yml  docker.yml  docs_deploy.yml  docs_preview.yml  fix-linting.yml  fix_linting.yml  gen_module_docs.yml  integration.yml  integration_test.yml  integration_tests.yml  lint_code.yml  linter.yml  merge_markers.yml  module-analysis.yml  module-requests.yml  module-triage.yml  multiqc.yml  multiqc_linux.yml  multiqc_windows.yml  mypy.yml  pr_report_deploy.yml  pr_report_preview.yml  screenshots.yml  seqera_docs_changelog.py  seqera_docs_changelog.yml  ty.yml  type-check.yml  (+6 more)
Example/genomescope/: bVidCha1_21.meryl.hist  mSorAra1_Model.txt  mSorAra1_Model_parameters.tabular  mSorAra1_Summary.txt
Example/merqury/: 1_Hifiasm_merq.bTaeGut2_prepurge_hap1.bTaeGut3_meryl1_3.hapmer.spectra-hap-cn.hist  1_Hifiasm_merq.bTaeGut2_prepurge_hap1.only.hist  1_Hifiasm_merq.bTaeGut2_prepurge_hap1.spectra-cn.hist  1_Hifiasm_merq.bTaeGut2_prepurge_hap2.bTaeGut3_meryl1_3.hapmer.spectra-hap-cn.hist  1_Hifiasm_merq.bTaeGut2_prepurge_hap2.only.hist  1_Hifiasm_merq.dist_only.hist  1_Hifiasm_merq.only.hist  1_Hifiasm_merq.spectra-asm.hist  1_Hifiasm_merq.spectra-cn.hist
docs/: CONFIG_WIZARD_README.md  README.md  compatibility.md  config.md  config.yaml  custom_content.md  customisation.md  downstream.md  index.md  installation.md  javascript.md  modules.md  multiqc_config_wizard.html  pipelines.md  plots.md  plugins.md  reports.md  templates.md  troubleshooting.md  usage.md  writing_javascript.md  writing_modules.md  writing_python.md
docs/autogenerated/: adapterremoval.md  afterqc.md  anglerfish.md  bakta.md  bamdst.md  bamtools.md  bbduk.md  bbmap.md  bcftools.md  bcl2fastq.md  bclconvert.md  biobambam2.md  biobloomtools.md  biscuit.md  bismark.md  bowtie1.md  bowtie2.md  bracken.md  busco.md  bustools.md  ccs.md  cellranger.md  checkqc.md  clipandmerge.md  clusterflow.md  conpair.md  cutadapt.md  damageprofiler.md  dedup.md  deeptools.md  diamond.md  disambiguate.md  dragen.md  dragen_fastqc.md  eigenstratdatabasetools.md  fastp.md  fastq_screen.md  fastqc.md  featurecounts.md  fgbio.md  (+113 more)
docs/core/: config.yaml  index.md  index.mdx
docs/development/: modules.md  plots.md
docs/images/: MultiQC_logo.ai
docs/markdown/: ai.md  changelog.md  config_schema.md  index.mdx  modules.mdx
docs/modules/: FCount_cus.md  NuGEN_dedup.md  abricate.md  adapterRemoval.md  adapterremoval.md  afterqc.md  anglerfish.md  artic.md  atropos.md  bakta.md  bamdst.md  bamtools.md  base2fastq.md  bases2fastq.md  bbduk.md  bbmap.md  bcftools.md  bcl2fastq.md  bclconvert.md  biobambam2.md  biobloomtools.md  biscuit.md  bismark.md  bowtie1.md  bowtie2.md  bracken.md  busco.md  bustools.md  ccs.md  cegx.md  cellranger.md  checkatlas.md  checkqc.md  conpair.md  (+152 more)
logs/: README.md  inspect.json
modules/: fastqc.py
multiqc/: __init__.py  __main__.py  base_module.py  config.py  config_defaults.yaml  fastqc.py  interactive.py  log.py  multiqc.py  report.py  search_patterns.yaml  search_patterns.yaml.bak  types.py  validation.py
multiqc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
new-docs/: docusaurus.config.ts
notebooks/: viralcon.ipynb
osx_app/: MultiQC.platypus  MultiQC_logo_square.ai  multiqc_app_header.html  run_multiqc.sh
sargassoLog/: overall_filtering_summary_example_three species.txt  overall_filtering_summary_example_two_species.txt
scripts/: build-assets.sh  changelog_to_docs.py  copy_material_icons.py  csp.py  doc_md_to_docstrings.py  downloads_stats.py  generade_module_docs.py  generate_config_docs.py  generate_config_schema.py  generate_config_wizard.py  lz-compress.py  lz-decompress.py  make_docs.py  make_module_docs.py  modules_info.py  multiqc  print_changelog.py  print_csp_hashes.py  print_missing_csp.py
templates/: default.html
test/: browser_test.js  config_example.yaml  conftest.py  fastp.json  mqc.config  package.json  print_missing_csp.py  run_tests.sh  run_unit_tests.sh  test_interactive.py  test_modules.py  test_samtools_flagstat.py
test_data/: RPE-BM510.mosaicatcher_info_raw.txt
testing/: mqc.config
tests/: conftest.py  test_cmdline.py  test_custom_configs.py  test_custom_content.py  test_fasterp.py  test_get_filelist.py  test_interactive.py  test_module_template.py  test_modules_run.py  test_natsort_files.py  test_output_options.py  test_plots.py  test_rerun.py  test_run.py  test_sample_name_cleaning.py  test_sample_renaming.py  test_search_files.py  test_snapshots.py  test_software_versions.py  test_special_cases.py  test_write_report.py  test_write_result.py
(+1535 files in other folders)
